--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mariadb://localhost/kitchengardendb
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
