--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
+server.error.include-message=ALWAYS
+server.error.include-stacktrace=NEVER
